--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,9 @@ services:
     container_name: ${PROJECT_NAME}-php-fpm
     depends_on:
       - mysql
+    environment:
+    - DATABASE_URL=${DATABASE_URL}
+    - APP_ENV=${APP_ENV}
 
   php-cli:
     build:
@@ -30,11 +33,11 @@ services:
 
   mysql:
     image: mysql:latest
-    command: --default-authentication-plugin=mysql_native_password
+    # command: --default-authentication-plugin=mysql_native_password
     volumes:
-      - mysql:/var/lib/mysql
-    container_name: ${PROJECT_NAME}-mysql
-    restart: always
+      - mysql:/var/lib/mysql:delegated
+    container_name: mysql
+    # restart: always
     environment:
       - "MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}"
       - "MYSQL_DATABASE=${MYSQL_DATABASE}"
